# Job_Hunter_AI

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  project_context.md  pyproject.toml  requirements.txt
.claude/: dashboard.json  settings.json
.claude/skills/job-hunt/: README.md  SKILL.md
config/: achievements.example.md  credentials.example.md  llm_providers.example.md  llm_providers.md  preferences.example.md  resume.example.md  search_queries.md
docs/: ARCHITECTURE.md  CHANGELOG.md  DEVELOPMENT_GUIDE.md  PROJECT_COMPLETION_SUMMARY.md  TASK_6_IMPLEMENTATION_SUMMARY.md  TASK_8_APPLICATION_GENERATOR.md  TESTING_PLAN.md
instructions/: README.md  apply_jobs_2026-01-29_EXAMPLE.json  scrape_jobs_example.json
src/: __init__.py
src/agents/: __init__.py  application_guide_generator.py  instruction_generator.py  platform_configs.py
src/core/: __init__.py  applier.py  browser.py  database.py  filter.py  gl_processor.py  importer.py  pdf_generator.py  tailor.py  telegram.py
src/core/llm/: __init__.py  base.py  claude_client.py  factory.py  gemini_client.py  glm_client.py  openai_client.py  openrouter_client.py
src/mcp_server/: __init__.py  server.py
src/mcp_server/tools/: __init__.py  antigravity.py  applier.py  (+9 more)
src/output/: __init__.py  report_generator.py
src/scrapers/: README.md  __init__.py  ats_scanner.py
src/utils/: __init__.py  config.py  logger.py  markdown_parser.py
templates/resume/: ats_friendly.html  modern.html  professional.html
tests/: __init__.py
tests/integration/: __init__.py  test_workflow.py
tests/unit/: __init__.py  test_application_guide_generator.py  test_applier.py  test_browser.py  test_config.py  test_database.py  test_database_update.py  test_filter.py  test_gl_processor.py  test_importer.py  test_instruction_generator.py  test_llm.py  test_mcp_server.py  test_report_generator.py  test_source_columns.py  test_telegram.py
